--- a/Buổi2/Bài3/TestDic.csproj
+++ b/Buổi2/Bài3/TestDic.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{30D1EE14-3117-472B-99AF-7186A35B698B}</ProjectGuid>
+    <ProjectGuid>{44E6ECC7-D20D-4DDE-B65C-7D4CDD9A1067}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Bài3</RootNamespace>
-    <AssemblyName>Bài3</AssemblyName>
+    <RootNamespace>TestDic</RootNamespace>
+    <AssemblyName>TestDic</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
